styles.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    min-height: 100%;
    background-attachment: fixed;
    background-image: linear-gradient(to top, rgb(0, 128, 128), rgb(1, 219, 219));
}

h1 {
}

#gameBoardContainer {
    display: grid;
    grid: 100px 100px 100px / 100px 100px 100px;
    justify-items: center;
    gap: 10px;
    background-color: aquamarine;
}

.cell {
    height: 100px;
    width: 100px;
    border-radius: 5px;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 4rem;
}

#gameArea {
    display: flex;
    justify-content: center;
    padding: 20px;
    border-radius: 20px;
    background-color: aquamarine;
    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.288);
    position: relative;
}

#playerOneBoard,
#playerTwoBoard {
    text-align: center;
    padding: 0px 16px;
    max-width: 200px;

}

#playerOneBoard {
    margin-right: 10px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

#playerTwoBoard {
    margin-left: 10px;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.highlight {
    background-color: rgb(188, 253, 232);
}

#popover {
    position: absolute;
    top: 50%;
    left: 50%;
    transition: opacity 250ms, transform 250ms;
    opacity: 1;
    transform: translateX(-50%) translateY(-50%) scaleX(1) scaleY(1); 
    background-color: white;
    border: 2px dashed black;
    border-radius: 5px;
    padding: 5px;
    pointer-events: none;
}

.popover-hidden {
    opacity: 0 !important;
    transform: translateX(-50%) translateY(-50%) scaleX(0.9) scaleY(0.9) !important;
}

dialog {
    top: 200px;
    border: none;
    background-color: rgb(93, 228, 66);
    border-radius: 5px;
    box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.274);
}

form > div:not(:last-child) {
    margin-bottom: 10px;
}

form > div:last-child {
    text-align: center;
}


input {
    padding: 5px;
    border-radius: 5px;
    border: none;
}

input:focus {
    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.253);
}

button {
    padding: 8px 24px;
    border-radius: 5px;
    border: none;
}

#restartButton {
    margin-top: 10px;
}

.hidden {
    visibility: hidden;
}

